Fix previous change to default

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@ layout: default
 title: Home
 ---
 
+<img src="{{ site.baseurl }}/assets/images/home.svg" alt="{{ site.name }}">
 <!-- Posts Index
 ================================================== -->
-<div class="blog-grid-container">
+<!-- <div class="blog-grid-container">
     {% for post in paginator.posts %}
         {% include postbox.html %}
     {% endfor %}
-</div>
+</div> -->
 
 <!-- Pagination
 ================================================== -->
-<div class="bottompagination">
+<!-- <div class="bottompagination">
 <span class="navigation" role="navigation">
     {% include pagination.html %}
 </span>
-</div>
-
+</div> -->
